--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7"
   },
   "name": "server",
   "version": "1.0.0",
