--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://Dimpax:789456123@cluster0.wo6yu0q.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://portfolio_user:789456123dp@cluster0.7xltilb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
